Use Stream.toList() wherever possible.