@@ -11,7 +11,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.StringUtils;
@@ -124,7 +123,7 @@ public class Index {
         if (shareWithUsersFile.exists()) {
             try {
                 shareWithUsers = FileUtils.readLines(shareWithUsersFile, "utf-8").stream().map(String::trim)
-                        .collect(Collectors.toList());
+                        .toList();
             } catch (IOException e) {
                 throw new RuntimeException(e);
             }
